--- a/Notebook_Pos_Self_Salience_APA.tex
+++ b/Notebook_Pos_Self_Salience_APA.tex
@@ -191,7 +191,7 @@ Correspondence concerning this article should be addressed to Hu Chuan-Peng, Sch
 \affiliation{\vspace{0.5cm}\textsuperscript{1} Nanjing Normal University, 210024 Nanjing, China\\\textsuperscript{2} Tsinghua University, 100084 Beijing, China\\\textsuperscript{3} University of Aberdeen, Aberdeen, Scotland}
 
 \abstract{
-To navigate in a complex social world, our cognitive system are evolved to be sensitive to social information. Among all these social informaiton, morality related information is of special interest. On the one hand, paying attention to other's moral character profitable for ourselves. On the other hand, we need to maitain a moral self-view that fit the soical norm. Though behavioral effect of moral character in person perception and moral self-enhancement had been extensively studied, whether the moral character related information can impact lower level perceptual process is unknown. In a series of experiments, we examined the effect of immediately acquired moral character information on perceptual matching, by using the social associative learning paradigm. Participants first learned the association between moral character and visual cues (shapes), then they performed a perceptual matching task. The results showed that when geometric shapes that associated with good moral character were prioritized, as compared to neutral or moral bad moral characters. This patterns of results were robust after changing the words for moral charachter or using diagnostic behavioral as an proxy of mroal character. Also, this patterns were robust when changing simultaneously presentation to sequential presentation. We then examined two approximate explanations for this effect: value-based prioritization or social-categorization based prioritization. We manipulated the identity of different moral character explicitly and found that the good moral character effect was strong when for the self-referential conditions but weak or non-exist for other-referential condition. We further tested the good-self based social categorization by presenting the identity or moral character information as task-irrelevant stimuli, so that we can distinguish between the unique good-self hypothesis and a more general good-person based social categorization hypothesis. We found that \ldots.., these results suggested that human are more senstive to the moral valence of self when the valence were task-irrelevant, but less sensitive to the identity of the morally good when the identity were task-irrelvant. These results added new evidence for the social vision and suggested the advantage of moral good depends on the self-relevant in perceptual decision-making task, instead of perspective free.
+To navigate in a complex social world, our cognitive system are evolved to be sensitive to social information. Among all these social informaiton, morality related information is of special interest. On the one hand, paying attention to other's moral character profitable for ourselves. On the other hand, we need to maitain a moral self-view that fit the soical norm. Though behavioral effects of moral character and moral self-enhancement had been extensively studied in psychology of morality, social perception, and identity, whether the moral character related information can impact low-level perceptual process is unknown. In a series of experiments, we examined the effect of immediately acquired moral character information on perceptual matching. Participants first learned the association between moral character and visual cues (shapes), then performed a perceptual matching task. The results showed that shapes associated with positive moral character were prioritized, as compared to neutral or negative bad moral characters. This pattern was robust after changing the words for moral charachter or using diagnostic behavioral as an proxy of mroal character. Also, this patterns were robust when changing simultaneous presentation to sequential presentation. We then examined two approximate explanations for this effect: value-based prioritization or social-categorization based prioritization. We manipulated the identity of different moral character explicitly and found that the good moral character effect was strong when for the self-referential conditions but weak or non-exist for other-referential condition. We further tested the good-self based social categorization by presenting the identity or moral character information as task-irrelevant stimuli, so that we can distinguish between the unique good-self hypothesis and a more general good-person based social categorization hypothesis. We found that \ldots.., these results suggested that participants are more senstive to the moral valence of self when the valence were task-irrelevant, but less sensitive to the identity of the morally good when the identity were task-irrelvant. These results added new evidence for the social vision and suggested the advantage of moral good depends on the self-relevant in perceptual decision-making task, instead of perspective free.
 }
 
 
@@ -212,7 +212,7 @@ Our information processing system had been evolved in a way that top-down factor
 
 {[}Morality is the central of human social life{]}. People experience a substantial amount of moral events in everyday life (e.g., Hofmann, Wisneski, Brandt, \& Skitka, 2014). When experiencing these events, it always involves judging ``good'' or ``bad.'' By judging ``right'' or ``wrong,'' people are implicitly judging the moral character of involved parties as ``good'' vs.~``bad'' (Uhlmann, Pizarro, \& Diermeier, 2015). The central role of moral character also supported by the extensive studies from person perception and social evaluation, where morality is a basic dimension for social evaluation (Abele, Ellemers, Fiske, Koch, \& Yzerbyt, 2020; Goodwin, 2015; Goodwin, Piazza, \& Rozin, 2014; Willis \& Todorov, 2006) and the most important aspect to evaluate the continuity of identity (Strohminger, Knobe, \& Newman, 2017).
 
-Given the importance of moral character, to successfully navigate in a social world, a person needs to both evaluate others' moral character and behave in a way that she/he is perceived as a moral person, or at least not a morally bad person. Maintaining a moral self-view is as important as making judgments about others' moral character (Ellemers, Toorn, Paunov, \& Leeuwen, 2019). Indeed, previous studies found that people maintain a positive moral self-view even after dishonest behavior (Monin \& Jordan, 2009) and that people evaluate themselves as morally superior to others (Klein \& Epley, 2016; Strohminger, Knobe, \& Newman, 2017; Tappin \& McKay, 2017). Recent theorists further integrated the moral judgment and moral self-view, proposed a person-centered account for moral psychology, which focused on the individuals in moral evaluation instead of acts (Uhlmann, Pizarro, \& Diermeier, 2015). Under this framework, previous seemingly contradicting phenomenons can be explained. For example, whether people decide to expose an unethical behavior depends on how their relationship of the target (e.g., Waytz, Dungan, \& Young, 2013).
+Given the importance of moral character, to successfully navigate in a social world, a person needs to both evaluate others' moral character and behave in a way that she/he is perceived as a moral person, or at least not a morally bad person. Maintaining a moral self-view is as important as making judgments about others' moral character (Ellemers, Toorn, Paunov, \& Leeuwen, 2019). Indeed, previous studies found that people maintain a positive moral self-view even after dishonest behavior (Monin \& Jordan, 2009) and that people evaluate themselves as morally superior to others (Klein \& Epley, 2016; Tappin \& McKay, 2017). Recent theorists further integrated the moral judgment and moral self-view, proposed a person-centered account for moral psychology, which focused on the individuals in moral evaluation instead of acts (Uhlmann, Pizarro, \& Diermeier, 2015). Under this framework, previous seemingly contradicting phenomenons can be explained. For example, whether people decide to expose an unethical behavior depends on how their relationship of the target (e.g., Waytz, Dungan, \& Young, 2013).
 
 To date, however, as Freeman and Ambady (2011) put it, studies in the perception of moral character didn't try to explain the perceptual process, rather, they are trying to explain the higher-order social cognitive processes that come after. Essentially, these studies are perception of moral character without perceptual process. Without knowledge of perceptual processes, we can not have a full picture of how moral character is processed in our cognition. As an increasing attention is paid to perceptual process underlying social cognition, it's clear that perceptual processes are strongly influenced by social factors, such as group-categorization, stereotype (see Bagnis, Celeghin, Mosso, \& Tamietto, 2019; Stolier \& Freeman, 2016; Xiao, Coppin, \& Bavel, 2016). Given the importance of moral character and that moral character related information has strong influence on learning and memory (Carlson, Maréchal, Oud, Fehr, \& Crockett, 2020; Stanley \& De Brigard, 2019), one might expect that moral character related information could also play a role in perceptual process.
 
@@ -223,7 +223,7 @@ To explore the perceptual process of moral character and the underlying mechanis
 
 {[}exp1a, b, c, and exp2{]}
 
-{[}using associative learning task to study the moral character's influence on perception{]} Though it is theoretically possible that moral character related information may be prioritized in perceptual process, no empirical studies had directly explored this possibility. One difficulty of studying the perceptual process of moral character is that moral character is an inferred trait instead of observable feature. Usually, one needs necessary more sensory input, e.g., behavior history, to infer moral character of a person. For example, Anderson, Siegel, Bliss-Moreau, and Barrett (2011) asked participant to first study the behavioral description of faces and then asked them to perform a perceptual detection task. They assumed that by learning the behavioral description of a person (represented by a face), participants can acquire the moral related information about faces, and the associations could then bias the perceptual processing of the faces (but see Stein, Grubb, Bertrand, Suh, and Verosky (2017)). One drawback of this approach is that participants may differ greatly when inferring the moral character of the person from behavioral descriptions, given that notion what is morality itself is varying across population Jones et al. (2021) and those descriptions and faces may themselves are idiosyncratic, therefore, introduced additional variance to the targeted effect.
+{[}using associative learning task to study the moral character's influence on perception{]} Though it is theoretically possible that moral character related information may be prioritized in perceptual process, no empirical studies had directly explored this possibility. One difficulty of studying the perceptual process of moral character is that moral character is an inferred trait instead of observable feature. Usually, one needs more sensory input, e.g., behavior history, to infer moral character of a person. For example, Anderson, Siegel, Bliss-Moreau, and Barrett (2011) asked participant to first study the behavioral description of faces and then asked them to perform a perceptual detection task. They assumed that by learning the behavioral description of a person (represented by a face), participants can acquire the moral related information about faces, and the associations could then bias the perceptual processing of the faces (but see Stein, Grubb, Bertrand, Suh, and Verosky (2017)). One drawback of this approach is that participants may differ greatly when inferring the moral character of the person from behavioral descriptions, given that notion what is morality itself is varying across population Jones et al. (2021) and those descriptions and faces may themselves are idiosyncratic, therefore, introduced additional variance to the targeted effect.
 
 An alternative is to use abstract semantic concepts. Abstract concepts of moral character are used to describe and represent moral characters. These abstract concepts may be part of a dynamic network in which sensory cue, concrete behaviors and other information can activate/inhibit each other (e.g., aggressiveness) (Amodio, 2019; Freeman \& Ambady, 2011). If a concept of moral character (e.g., good person) is activated, it should be able to influence on the perceptual process of the visual cues through the dynamic network, especially when the perceptual decision-making is about the concept-cue association. In this case, abstract concepts of moral character may serve as signal of moral reputation (for others) or moral self-concept. Indeed, previous studies used the moral words and found that moral related information can be perceived faster Firestone \& Scholl (2015). If moral character is an important in person perception, then, just as those other information such as races and stereotype (see Xiao, Coppin, \& Bavel, 2016), moral character related concepts also change the perceptual processes.
 
@@ -234,13 +234,13 @@ Our first question is, whether the words used the in the associative paradigm is
 \hypertarget{morality-as-a-social-categorization}{%
 \subsection{Morality as a social-categorization?}\label{morality-as-a-social-categorization}}
 
-{[}possible explanations: person-based self-categorization vs.~stimuli-based valence{]} The robust pattern from the first four experiments revealed a novel pattern that needs an explanation. It's novel because it's contradict with the ``negative is stronger than positive'' hypothesis in social psychology (Baumeister, Bratslavsky, Finkenauer, \& Vohs, 2001). There are two major alternatives. One possible explanation is the value-based attention, which suggested that valuable stimuli is prioritized in our low-level cognitive processes. Because positive moral character is potentially rewarding, e.g., potential cooperators, it is valuable to individuals and therefore being prioritized. Most empirical evidence for value-based attention are from experiments used monetary reward. However, the monetary reward might be different greatly from the morality in social setting. So far, only a few empirical studies supported the value-based attention in social evaluation. XXX found that trustworthy faces attracted attention more than untrustworthy faces, probably because trustworthy faces are more likely to be the collaborative partners subsequent tasks, which will bring reward. Applying this explanation to the current setting need a further assumption that participants automatically view the moral character related information as self-relevant objects. Only based on the objectified stimuli that we evaluate their value (rewardign or threatengin) to us (Juechems \& Summerfield, 2019; Reicher \& Hopkins, 2016).
+{[}possible explanations: person-based self-categorization vs.~stimuli-based valence{]} The robust pattern from the first four experiments revealed a novel pattern that needs an explanation. It's novel because it's contradict with the ``negative is stronger than positive'' hypothesis in social psychology (Baumeister, Bratslavsky, Finkenauer, \& Vohs, 2001). There are two major alternatives. One possible explanation is the value-based attention, which suggested that valuable stimuli is prioritized in our low-level cognitive processes. Because positive moral character is potentially rewarding, e.g., potential cooperators, it is valuable to individuals and therefore being prioritized. Most empirical evidence for value-based attention are from experiments used monetary reward. However, the monetary reward might be different greatly from the morality in social setting. So far, only a few empirical studies supported the value-based attention in social evaluation. XXX found that trustworthy faces attracted attention more than untrustworthy faces, probably because trustworthy faces are more likely to be the collaborative partners subsequent tasks, which will bring reward. Applying this explanation to the current setting need a further assumption that participants automatically view the moral character related information as self-relevant objects. Only based on the objectified stimuli that we evaluate their value (rewarding or threatening) to us (Juechems \& Summerfield, 2019; Reicher \& Hopkins, 2016).
 
-Another possibility is that we will perceive those moral character not as objects but as person, and automatic categorize whether they are ingroup or ougroup, that is, the social categorization process. This account assumed that moral character served as a way to categorize other. In the first four experiments' situation, the identity of the moral character is ambiguous, participants may automatically categorize morally good people as ingroup and therefore preferentially processed these information.
+Another possibility is that we will perceive those moral character not as objects but as person, and automatic categorize whether they are in-group or out-group, instead of calculating their value to us. This account assumed that moral character served as a way to categorize other. In the first four experiments' situation, the identity of the moral character is ambiguous, participants may automatically categorize morally good people as in-group and therefore preferentially processed these information.
 
-However, the above four experiments can not distinguish between these two possibilities, because the concept ``good-peron'' can both be rewarding and be categorized as ingroup member, and previous studies using associative learning paradigm revealed that both rewarding stimuli (e.g., Sui, He, \& Humphreys, 2012) and in-group information {[}enock\_overlap\_2020{]} are prioritized.
+However, the above four experiments could not distinguish between these two possibilities, because the concept ``good-person'' can both be rewarding and be categorized as in-group member, and previous studies using associative learning paradigm revealed that both rewarding stimuli (e.g., Sui, He, \& Humphreys, 2012) and in-group information {[}enock\_overlap\_2020{]} are prioritized.
 
-{[}Distinguish two explanations by make self salient, exp3a, 3b, 6b{]} Though these two frameworks can both account for the positivity effect found in first four experiments (i.e., prioritization of ``good-person,'' but not ``neutral person'' and ``bad person''), they have different prediction if the experiment design include both identity and moral valence where the valence (good, bad, and neutral) conditions can describe both self and other. In this case the identity become salient and participants are less likely to spontaneously identify a good-person other than self as the extension of self, but the value of good-person still exists. Actually, the rewarding value of good-other might be even stronger than good-self because the former indicate potential cooperation and material rewards, but the latter is more linked to personal belief. This means that the social categorization theory predicts participants prioritize good-self but not good-other, while reward-based attention theory predicts participants are both prioritized. Also, as in Hu, Lan, Macrae, and Sui (2020), people may also only identify with good-self instead of bad self. That is, people will show a unique pattern of self-identification: only good-self is identified as ``self'' while all the others categories were excluded.
+{[}Distinguish two explanations by make self salient, exp3a, 3b, 6b{]} Though both two frameworks can account for the positivity effect found in first four experiments (i.e., prioritization of ``good-person,'' but not ``neutral person'' and ``bad person''), they have different prediction if the experiment design include both identity and moral valence where the valence (good, bad, and neutral) conditions can describe both self and other. In this case the identity become salient and participants are less likely to spontaneously identify a good-other as the extension of self, but the value of good-person still exists. Actually, the rewarding value of good-other might be even stronger than good-self because the former indicate potential cooperation and material rewards, but the latter is more linked to personal belief. This means that the social categorization theory predicts participants prioritize good-self but not good-other, while reward-based attention theory predicts participants are both prioritized. Also, as in Hu, Lan, Macrae, and Sui (2020), people may also only identify with good-self instead of bad self. That is, people will show a unique pattern of self-identification: only good-self is identified as ``self'' while all the others categories were excluded.
 
 In exp 3a, 3b, and 6b, we found that (1) good-self is always faster than neutral-self and bad-self, but good-other only have weak to null advantage to neutral-other and bad-other. which mean the social categorization is self-centered. (2) good-self's advantage over good other only occur when self- and other- were in the same task. i.e.~the relative advantage is competition based instead of absolute. These three experiments suggest that people more like to view the moral character stimuli as person and categorize good-self as an unique category against all others. A mini-meta-analysis showed that there was no effect of valence when the identity is other. This results showed that value-based attention is not likely explained the pattern we observed in first four experiments. Why good-self is prioritized is less clear. Besides the social-categorization explanation, it's also possible that good self is so unique that it is prioritized in all possible situation and therefore is not social categorization \emph{per se}.
 
@@ -434,27 +434,7 @@ To further explore the psychological mechanism under perceptual decision-making,
 \hypertarget{part-1-perceptual-processing-moral-character-related-information}{%
 \section{Part 1: Perceptual processing moral character related information}\label{part-1-perceptual-processing-moral-character-related-information}}
 
-In this part, we report results from five experiments that tested whether an associative learning task. These five experiments revealed a robust effect of moral character on perceptual matching task.
-
-\includegraphics{Notebook_Pos_Self_Salience_APA_files/figure-latex/prepare data for first meta-1.pdf}
-
-\begin{verbatim}
-## Warning: There were 2 divergent transitions after warmup. Increasing adapt_delta
-## above 0.95 may help. See http://mc-stan.org/misc/warnings.html#divergent-
-## transitions-after-warmup
-\end{verbatim}
-
-\includegraphics{Notebook_Pos_Self_Salience_APA_files/figure-latex/first meta sdt-1.pdf} \includegraphics{Notebook_Pos_Self_Salience_APA_files/figure-latex/first meta sdt-2.pdf}
-
-\includegraphics{Notebook_Pos_Self_Salience_APA_files/figure-latex/first meta rt-1.pdf}
-
-\begin{verbatim}
-## Warning: There were 1 divergent transitions after warmup. Increasing adapt_delta
-## above 0.95 may help. See http://mc-stan.org/misc/warnings.html#divergent-
-## transitions-after-warmup
-\end{verbatim}
-
-\includegraphics{Notebook_Pos_Self_Salience_APA_files/figure-latex/first meta rt-2.pdf} \includegraphics{Notebook_Pos_Self_Salience_APA_files/figure-latex/first meta rt-3.pdf}
+In this part, we report results from five experiments that tested whether an associative learning task, including 192 participants. Note that for both experiment 1a and 1b, there were two independent samples with different equipment, trials numbers and testing situation. Therefore, we modeled them as independent samples. These five experiments revealed a robust effect of moral character on perceptual matching task.
 
 \begin{figure}
 \centering
@@ -462,12 +442,22 @@ In this part, we report results from five experiments that tested whether an ass
 \caption{\label{fig:plot-bayes-meta-1}Effect of moral valence on RT and d'}
 \end{figure}
 
-See Figure \ref{fig:plot-bayes-meta-1}.
+For the \emph{d} prime, we found robust effect of moral valence. Shapes associated with positive moral valence (``good person,'' ``kind person'' or a name associated with morally good behavioral history) has higher sensitivity (mean = , 95\% HDI = ) than shapes associated with neutral condition (mean = , 95\% HDI = ), but we did not find differences between shapes associated with negative moral label (mean = , 95\% HDI = ) and neutral condition.
+
+For the reaction times, we also found robust effect of moral valence. Shapes associated with positive moral valence has faster responses (mean = , 95\% HDI = ) than shapes associated with neutral condition (mean = , 95\% HDI = ). We also found that the responses to shapes associated with negative moral valence (mean = , 95\% HDI = ) were slower as compared to the neutral condition. See Figure \ref{fig:plot-bayes-meta-1}.
 
 \hypertarget{part-2-interaction-between-valence-and-identity}{%
 \section{Part 2: interaction between valence and identity}\label{part-2-interaction-between-valence-and-identity}}
 
-In this part, we report three experiments that aimed at testing whether the moral valence effect found in the previous experiments can be modulated by the self-referential processing.
+In this part, we report three experiments (3a, 3b, and 6b) that aimed at testing whether the moral valence effect found in the previous experiments can be modulated by the self-referential processing. These analysis included 108 participants.
+
+\begin{figure}
+\centering
+\includegraphics{Notebook_Pos_Self_Salience_APA_files/figure-latex/plot-bayes2-1.pdf}
+\caption{\label{fig:plot-bayes2}Interaction between moral valence and self-referential}
+\end{figure}
+
+See Figure \ref{fig:plot-bayes2}.
 
 \hypertarget{part-3-implicit-binding-between-valence-and-identity}{%
 \section{Part 3: Implicit binding between valence and identity}\label{part-3-implicit-binding-between-valence-and-identity}}
